# rust-practice

./: .gitignore  README.md
day1/src/: main.rs
day11/practice/: Cargo.toml
day11/practice/src/: main.rs
day12/src/: main.rs
day13/src/: main.rs
day14/src/: main.rs
day15/: Cargo.toml
day15/src/: main.rs
day16/src/: main.rs
day17/: main
day17/src/: main.rs
day18/: Cargo.toml
day18/src/: main.rs
day19/src/: main.rs
day2/practice/src/: main.rs
day2/quadrant-distance/: Cargo.toml
day2/quadrant-distance/src/: main.rs
day20/src/: main.rs
day21/: Cargo.toml
day21/src/: main.rs
day22/src/: main.rs
day23/src/: main.rs
day24/src/: main.rs
day25/: Cargo.toml
day25/src/: main.rs
day26/: Cargo.toml
day26/src/: main.rs
day27/: Cargo.toml
day27/src/: lib.rs
day28/: Cargo.toml
day3/practice/: Cargo.toml
day3/practice/src/: main.rs
day3/student-management/src/: main.rs
day4/practice/src/: main.rs
day5/practice/: sample.txt
day5/practice/src/: lib.rs  main.rs
day6/modules_prac/: Cargo.toml
day6/modules_prac/src/: main.rs
day6/modules_prac/src/models/: post.rs  user.rs
day8/password_gen/: Cargo.toml
day8/password_gen/src/: main.rs
day8/practice/src/: main.rs
day9/pratice/: Cargo.toml
day9/pratice/src/: main.rs
day9/simple-calcu/: Cargo.toml
day9/simple-calcu/src/: main.rs
